# perovskite

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
examples/minimal-menu/: Cargo.toml
examples/minimal-menu/src/: main.rs
examples/minimal-pixels/: Cargo.toml
examples/minimal-pixels/src/: main.rs
src/: app.rs  app_builder.rs  app_settings.rs  input.rs  lib.rs  menu.rs  render_context.rs
