[package]
name = "perovskite"
version = "0.2.1"
description = "A simple framework for building cross-platform desktop apps, drawing to a pixel buffer, and handling user input."
repository = "https://github.com/JacobMillward/perovskite"
authors = ["Jacob Millward <jacob@millward.dev>"]
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.29", features = ["rwh_05"] }
muda = "0.11.4"
anyhow = "1.0.81"
pixels = "0.13.0"

[target.'cfg(windows)'.dependencies]
windows-sys = "0.52.0"
